--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
 </head>
 <body>
 	<h1>Github Test</h1>
+	<ul>
+		<li>item 1</li>
+		<li>item 2</li>
+		<li>item 3</li>
+		<li>item 4</li>
+		<li>item 5</li>
+	</ul>
 </body>
 </html>
